--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@capacitor/ios": "^3.5.1",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "firebase": "^9.8.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
