--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.2",
     "@capacitor/android": "^3.5.1",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "^3.5.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "^3.5.1",
